--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.79.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
