--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-hook-form": "^7.53.0",
     "react-scripts": "5.0.1",
     "sass": "^1.79.3",
+    "tsc": "^2.0.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
